add context to default layout

--- a/root/views/layout.hbs
+++ b/root/views/layout.hbs
@@ -10,6 +10,8 @@
 	<!-- Livereload script. Automatically reloads CSS when changed. -->
 	<script src="http://localhost:35729/livereload.js?snipver=1"></script>
 	{{/dev}}
+	<!-- Site context, made available for use in client side javascript -->
+	<script>{{{context}}}</script>
     <script src="/compiled/scripts.js"></script>
 
 </head>
