use "name" instead of "page"

--- a/root/views/layout.hbs
+++ b/root/views/layout.hbs
@@ -15,7 +15,7 @@
     <script src="/compiled/scripts.js"></script>
 
 </head>
-<body id="page-{{page}}">
+<body id="page-{{page.name}}">
 
 	{{{body}}}
 
