--- a/root/views/layout.hbs
+++ b/root/views/layout.hbs
@@ -5,6 +5,7 @@
 <!--[if gt IE 8]><!--><html class="no-js"><!--<![endif]-->
 <head>
 
+	<title>{{page.title}}</title>
 	<link rel="stylesheet" href="/compiled/styles.css" />
 	{{#dev}}
 	<!-- Livereload script. Automatically reloads CSS when changed. -->
