Configurable LiveReload port.

--- a/root/views/layout.hbs
+++ b/root/views/layout.hbs
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="/compiled/styles.css" />
 	{{#dev}}
 	<!-- Livereload script. Automatically reloads CSS when changed. -->
-	<script src="http://localhost:35729/livereload.js?snipver=1"></script>
+	<script src="http://localhost:{{livereload_port}}/livereload.js?snipver=1"></script>
 	{{/dev}}
 	<!-- Site context, made available for use in client side javascript -->
 	<script>{{{context}}}</script>
